Content Overflow in list fixed

--- a/index.css
+++ b/index.css
@@ -83,6 +83,9 @@ button{
     border-radius: 2px;
 
 }
+span{
+    overflow: auto;
+}
 
 @media(max-width: 700px){
     .container{
